--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
     align-items: center;
     position: relative;
     min-height: 600px;
-    background-image: url(/images/background.jpg);
+    background-image: url(images/background.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
