--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-color: hsl(220, 35%, 60%);
+    background-color: hsl(220, 50%, 50%);
     background-blend-mode: multiply;
 }
 
@@ -97,48 +97,48 @@ header h3 {
     font-size: 1.1rem;
     font-weight: 200;
 }
-.overlay {
+header::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: hsla(220, 0%, 0%, 0.25);
+    background-color: hsla(220, 0%, 0%, 0.3);
 }
 
-article {
+section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 500px;
+    min-height: 600px;
     padding: 30px;
 }
 
-article .items {
+section .items {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
 
-article .items .item {
+section .items .item {
     display: flex;
     flex-direction: column;
-    align-content: stretch;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-between;
     padding: 10px;
+    min-height: 350px;
 }
 
-article .items img {
+section .items img {
     max-width: 100%;
 }
-article h1 {
+section h1 {
     font-size: 1.8rem;
     font-weight: 300;
     margin-bottom: 30px;
 }
-article .items .item h3 {
+section .items .item h3 {
     margin-top: 20px;
     text-align: center;
     font-weight: 300;
@@ -370,7 +370,7 @@ footer .doc a:hover {
     color: rgb(50, 216, 218);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 425px) {
     header .content {
         padding: 10px;
     }
@@ -386,8 +386,12 @@ footer .doc a:hover {
         flex-direction: column;
     }
 
-    article .items {
+    section .items {
         grid-template-columns: 1fr;
+    }
+
+    section .items .item {
+        min-height: auto;
     }
 
     footer {
