--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-color: hsl(220, 50%, 50%);
+    background-color: hsl(220, 30%, 40%);
     background-blend-mode: multiply;
 }
 
@@ -87,14 +87,14 @@ header .content .badges {
     margin-top: 30px;
 }
 header h1 {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     text-transform: uppercase;
     font-weight: 300;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 header h3 {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: 200;
 }
 header::after {
@@ -104,7 +104,7 @@ header::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: hsla(220, 0%, 0%, 0.3);
+    background-color: hsla(220, 0%, 0%, 0.2);
 }
 
 section {
@@ -144,7 +144,7 @@ section .items .item h3 {
     font-weight: 300;
 }
 
-.comprar {
+section:nth-child(odd) {
     background: linear-gradient(
             45deg,
             rgba(152, 152, 152, 0.07) 0%,
@@ -197,7 +197,7 @@ section .items .item h3 {
         linear-gradient(90deg, rgb(2, 110, 165), rgb(50, 216, 218));
 }
 
-.vender {
+section:nth-child(even) {
     color: #2e749d;
     background: linear-gradient(
             135deg,
@@ -245,6 +245,60 @@ section .items .item h3 {
             rgba(234, 234, 234, 0.03) 100%
         ),
         linear-gradient(90deg, #fff, #fff);
+}
+
+.equipe {
+    padding: 1rem;
+}
+.equipe h1 {
+    font-weight: 400;
+    font-size: 1.6rem;
+}
+.equipe .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    width: 100%;
+    /* padding: 1rem; */
+}
+
+.equipe .container .avatar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 350px;
+
+    object-fit: cover;
+    border-radius: 0.5rem;
+    /* background: white; */
+    /* border: 1px solid black; */
+}
+
+.equipe .container .avatar figure {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 5px solid white;
+}
+
+.equipe .container .avatar img {
+    width: 100%;
+}
+.equipe .container .avatar .content {
+    text-align: center;
+}
+.equipe .container .avatar .content .head {
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.equipe .container .avatar .content .subhead {
+    font-size: 1rem;
 }
 
 footer {
@@ -368,6 +422,37 @@ footer .doc a {
 
 footer .doc a:hover {
     color: rgb(50, 216, 218);
+}
+
+.documentacao {
+    color: black;
+    margin: 50px;
+}
+
+.documentacao img {
+    width: 100%;
+}
+
+.documentacao h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 1.8rem 0;
+    font-weight: 400;
+}
+
+.documentacao p {
+    margin-bottom: 1rem;
+}
+
+.documentacao ul {
+    list-style: none;
+}
+
+.documentacao li {
+    margin-bottom: 0.5rem;
 }
 
 @media only screen and (max-width: 425px) {
