--- a/style.css
+++ b/style.css
@@ -493,3 +493,10 @@ h6 {
         margin-top: 20px;
     }
 }
+
+/* quando em modo impressao quebra a pagina */
+@media print {
+    article {
+        page-break-after: always;
+    }
+}
