--- a/docs/style.css
+++ b/docs/style.css
@@ -65,3 +65,16 @@ ul.breadcrumb li a:hover {
     color: #555;
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 425px) {
+    main {
+        background-color: #ffffff;
+        margin: 0;
+        padding: 10px 25px;
+    }
+
+    .table-resposive {
+        overflow-x: scroll;
+        width: 100%;
+    }
+}
