--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header nav {
 
 header nav .brand a {
     font-size: 2.5rem;
-    background: linear-gradient(to right, rgb(2, 110, 165), rgb(50, 216, 218));
+    background: linear-gradient(90deg, rgb(252, 108, 53), rgb(170, 18, 159));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-box-decoration-break: clone;
@@ -50,7 +50,7 @@ header nav .brand a {
 header nav .brand a:hover {
     color: lightgrey;
     -webkit-background-clip: none;
-    -webkit-text-fill-color: rgb(50, 216, 218);
+    -webkit-text-fill-color: rgb(252, 108, 53);
 }
 
 header nav .menu {
@@ -89,12 +89,17 @@ header .content .badges {
 header h1 {
     font-size: 2.5rem;
     text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 400;
     /* margin: 20px; */
+    background: linear-gradient(90deg, rgb(252, 108, 53), rgb(170, 18, 159));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
 }
 
 header h3 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 200;
 }
 header::after {
@@ -105,6 +110,21 @@ header::after {
     width: 100%;
     height: 100%;
     background-color: hsla(220, 0%, 0%, 0.2);
+}
+
+header .button {
+    font-size: 1rem;
+    font-weight: 400;
+    display: inline-block;
+    min-width: 300px;
+    background: linear-gradient(90deg, rgb(252, 108, 53), rgb(170, 18, 159));
+    padding: 1.5rem;
+    text-align: center;
+    border-radius: 5px;
+    /* border: 3px solid white; */
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
 }
 
 section {
@@ -146,55 +166,33 @@ section .items .item h3 {
 
 section:nth-child(odd) {
     background: linear-gradient(
-            45deg,
-            rgba(152, 152, 152, 0.07) 0%,
-            rgba(152, 152, 152, 0.07) 48%,
-            rgba(136, 136, 136, 0.07) 48%,
-            rgba(136, 136, 136, 0.07) 100%
+            330deg,
+            rgba(225, 225, 225, 0.05) 0%,
+            rgba(225, 225, 225, 0.05) 33.333%,
+            rgba(114, 114, 114, 0.05) 33.333%,
+            rgba(114, 114, 114, 0.05) 66.666%,
+            rgba(52, 52, 52, 0.05) 66.666%,
+            rgba(52, 52, 52, 0.05) 99.999%
         ),
         linear-gradient(
-            45deg,
-            rgba(235, 235, 235, 0.06) 0%,
-            rgba(235, 235, 235, 0.06) 79%,
-            rgba(218, 218, 218, 0.06) 79%,
-            rgba(218, 218, 218, 0.06) 100%
+            66deg,
+            rgba(181, 181, 181, 0.05) 0%,
+            rgba(181, 181, 181, 0.05) 33.333%,
+            rgba(27, 27, 27, 0.05) 33.333%,
+            rgba(27, 27, 27, 0.05) 66.666%,
+            rgba(251, 251, 251, 0.05) 66.666%,
+            rgba(251, 251, 251, 0.05) 99.999%
         ),
         linear-gradient(
-            135deg,
-            rgba(12, 12, 12, 0.04) 0%,
-            rgba(12, 12, 12, 0.04) 30%,
-            rgba(79, 79, 79, 0.04) 30%,
-            rgba(79, 79, 79, 0.04) 100%
+            225deg,
+            rgba(98, 98, 98, 0.05) 0%,
+            rgba(98, 98, 98, 0.05) 33.333%,
+            rgba(222, 222, 222, 0.05) 33.333%,
+            rgba(222, 222, 222, 0.05) 66.666%,
+            rgba(228, 228, 228, 0.05) 66.666%,
+            rgba(228, 228, 228, 0.05) 99.999%
         ),
-        linear-gradient(
-            45deg,
-            rgba(173, 173, 173, 0.03) 0%,
-            rgba(173, 173, 173, 0.03) 66%,
-            rgba(245, 245, 245, 0.03) 66%,
-            rgba(245, 245, 245, 0.03) 100%
-        ),
-        linear-gradient(
-            135deg,
-            rgba(84, 84, 84, 0.06) 0%,
-            rgba(84, 84, 84, 0.06) 51%,
-            rgba(165, 165, 165, 0.06) 51%,
-            rgba(165, 165, 165, 0.06) 100%
-        ),
-        linear-gradient(
-            45deg,
-            rgba(15, 15, 15, 0.02) 0%,
-            rgba(15, 15, 15, 0.02) 14%,
-            rgba(95, 95, 95, 0.02) 14%,
-            rgba(95, 95, 95, 0.02) 100%
-        ),
-        linear-gradient(
-            0deg,
-            rgba(34, 34, 34, 0.05) 0%,
-            rgba(34, 34, 34, 0.05) 58%,
-            rgba(98, 98, 98, 0.05) 58%,
-            rgba(98, 98, 98, 0.05) 100%
-        ),
-        linear-gradient(90deg, rgb(2, 110, 165), rgb(50, 216, 218));
+        linear-gradient(90deg, rgb(28, 20, 63), rgb(40, 160, 253));
 }
 
 section:nth-child(even) {
